fix: modernize look of in-xblock shift-dates banner
Specifically, use our standard warning-banner colors and add a
drop shadow. Also, updates the text to match the text used
elsewhere.

AA-835

--- a/lms/static/sass/course/layout/_banner_cta.scss
+++ b/lms/static/sass/course/layout/_banner_cta.scss
@@ -25,8 +25,8 @@
 
 .banner-cta {
     border-radius: 4px;
-    border: solid 1px #9cd2e6;
-    background-color: #eff8fa;
+    border: solid 1px $state-warning-border;
+    background-color: $state-warning-bg;
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 24px;
@@ -34,11 +34,12 @@
     flex-wrap: wrap;
     justify-content: space-between;
     max-width: $text-width-readability-max;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15), 0px 1px 4px rgba(0, 0, 0, 0.15);
 
     .banner-cta-text {
       font-size: 16px;
       line-height: 24px;
-      color: #414141;
+      color: $state-warning-text;
 
       a.mobile-dates-link {
         color: #0075b4;
